Add phase3. Minor changes to rest

--- a/.gitignore
+++ b/.gitignore
@@ -161,8 +161,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# Project-specific exclusions
 *.csv
-pandas
+/images/
 
 # Python cache files
 __pycache__/
